@@ -1,3 +1,7 @@
+2004-11-25  Raja R Harinath  <rharinath@novell.com>
+
+	* Makefile.am (MPH_SOURCE): Distribute map.h.
+
 2004-11-18  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* stdio.c: Add fread(3) and fwrite(3) wrappers.
